--- a/public/assets/css/styles.custom.css
+++ b/public/assets/css/styles.custom.css
@@ -154,7 +154,7 @@ a.gbs-greenish-transparent:hover {
     border-color: #8ba76b !important;
 }
 
-.gbs-btn-cyan:hover {
+.gbs-btn-greenish:hover {
     background-color: #000 !important;
     color: #fff !important;
     border-color: #000 !important;
